# NekoFlash

./: .gitattributes  .gitignore  BUILDING.md  CHANGELOG.md  LAUNCHER_ARTWORK_SHA256.txt  NOTICE  PROJECT_MASTER_TRACKER.md  README.md  SHA256SUMS  WELCOME_ARTWORK_SHA256.txt  gradle.properties
.github/workflows/: build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_usbfs.cpp
app/src/main/res/color/: nf_action_tile_background.xml  (+9 more)
docs/: AI_START_HERE.md  ALPHA5_HARDWARE_POLISH_PLAN.md  ARCHITECTURE.md  HARDWARE_VALIDATION.md  LAUNCHER_IDENTITY.md  README.md  RECOVERY_FIRST_PLAN.md  RELEASE_PROCESS.md  SAFETY_MODEL.md  SCOPE.md  TERMUX_WORKFLOW.md  USB_PROTOCOL.md  V6_AUDIT.md  WELCOME_ASSET_LOCK.md  documentation-manifest.json
gradle/wrapper/: gradle-wrapper.properties
scripts/: build-apk.bat  build-apk.sh  check-ab-safety.py  check-diagnostic-logging.py  check-documentation.py  check-flash-safety.py  check-usb-connectivity.py  check_project.py  checksum_inventory.py  export-chat-context.sh  run-tests.sh  run-with-timeout.py  termux-bootstrap.sh  termux-ci.sh  termux-publish-both-branches.sh  termux-publish.sh  test-checksum-inventory.py  update-checksums.py
tools/: tests.manifest
tools/fastboot-core-test/android/os/: BuildStubs.kt
tools/mi-account-client-test/org/json/: JSONObject.kt
tools/mi-unlock-client-test/android/util/: Base64.kt
tools/mi-unlock-client-test/org/json/: JSONObject.kt
tools/preflight-validator-test/android/content/: Context.kt  Intent.kt  IntentFilter.kt
(+111 files in other folders)
